Se incluye jQuery Confirm

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -13,6 +13,7 @@
 @import "components/simplebar/_simplebar";
 @import "components/flatpickr/_flatpickr";
 @import "components/floating-labels";
+@import "components/jquery.confirm/jquery.confirm";
 @import "layouts/_nav";
 @import "layouts/_aside";
 @import "components/_login";
