--- a/assets/views/modals-1.pug
+++ b/assets/views/modals-1.pug
@@ -97,27 +97,84 @@ block content
                         .modal-header
                             h5#exampleModalLabel.modal-title Modal title
                             button.close(type="button" data-dismiss="modal" aria-label="Close")
-                            span(aria-hidden="true") ×
+                                span(aria-hidden="true") ×
                         .modal-body
-                            form
-                                fieldset
-                                    legend Esta es la leyenda
-                                    .row
-                                        .form-group.input-field.col-lg-6
-                                            input.form-control(type="text")
-                                            label Buscar por SNIP
-                                        .form-group.input-group.col-lg-6
-                                            select#inputGroupSelect04.custom-select
-                                                option(selected="") Choose...
-                                                option(value="1") One
-                                                option(value="2") Two
-                                                option(value="3") Three
-                                            label Buscar por descripción de SNIP
-                                            .input-group-append
-                                                button.btn.btn-light(type="button") Buscar
-                                        .form-group.input-field.col-lg-3
-                                            input.form-control(type="date")
-                                            label Fecha de entrega
-                        .modal-footer
+                            p Ejemplo de BootBoxJS en esta página. Usa confirm.
+                            .chart__table
+                        //.modal-footer
                             button.btn.btn-secondary(type="button" data-dismiss="modal") Close
                             button.btn.btn-primary(type="button") Save changes
+
+block append scripts
+    script.
+        let $ = require('jquery');
+        const bootbox = require("bootbox");
+        let toastr = require("toastr");
+        let DataTable = require("datatables.net-responsive-bs4");
+        //let tableData = [];
+        
+        $(".chart__table").html(`
+        <table id="starwars" class="dt-responsive" cellspacing="0" width="100%">
+            <thead class="thead-dark">
+            <tr>
+                <th>Planeta</th>
+                <th>Diametro</th>
+                <th>Población</th>
+                <th>Acciones</th>
+            </tr>
+            </thead>
+            <tbody>
+            </tbody>
+        </table>
+        `);
+
+        var t = $('#starwars').DataTable(
+        {
+            dom: 'frtip',
+            //buttons: [
+            //    'copy', 'csv', 'excel', 'pdf', 'print'
+            //],
+        } 
+        );
+        
+        $.ajax({
+        url: "https://swapi.co/api/planets/",
+        dataType: "json",
+        success: function( data ) {
+            let arr = data.results;
+
+            for(var i = 0; i < arr.length; i++ ){
+            t.row.add( [
+                arr[i].name,
+                arr[i].diameter,
+                arr[i].population,
+                '<nav class="nav-actions"><a style="color:red" id="delete" href="#"><i class="fas fa-trash-alt"></i></a></nav>'
+            ] ).draw( false );
+            }
+        }
+        });
+
+        $("#starwars").on('click', '#delete', function(){
+            console.log("clicked");
+            bootbox.confirm({
+                title: "Mensaje del Sistema",
+                message: "Esta seguro de eliminar esto?",
+                buttons: {
+                    confirm: {
+                        label: '<i class="fas fa-check-circle"></i> Eliminar',
+                        className: 'btn-danger'
+                    },
+                    cancel: {
+                        label: '<i class="fas fa-times"></i> Cancelar',
+                        className: 'btn-default'
+                    }
+                },
+                callback: function(result){
+                    if(result){
+                        toastr.error("¡Eliminado!");
+                    }else{
+                        toastr.success("No se elimino nada");
+                    }
+                }
+            });
+        }); 
