Mejorado los cards y labels

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -254,7 +254,7 @@ $danger: $red;
 // Body
 //
 // Body colors
-$body-bg: #f4f6f9;
+$body-bg: #ecf0f5;
 
 //Border
 $border-radius: .35rem !default;
