--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -126,7 +126,7 @@ a {
 
     .card-header,
     .card-body {
-        padding: 1.5rem;
+        padding: 1rem;
     }
 
     .card-header {
@@ -134,6 +134,8 @@ a {
         flex-direction: row;
         align-items: center;
         justify-content: space-between;
+        background-color: transparent;
+        border-bottom: 1px solid #f4f4f4;
     }
 
     .card-body {
@@ -207,6 +209,10 @@ nav[aria-label="breadcrumb"]{
 //
 // Forms
 //   
+form label {
+  font-weight: 700;
+}
+
 .btn,
 .popover,
 .popover-header,
@@ -533,7 +539,12 @@ sup {
 //
 @each $color, $value in $theme-colors {
     .card-#{$color} {
-        @include card-variant($value);
+        // @include card-variant($value);
+        border-top: 3px solid $value;
+
+        .dropdown .btn-link {
+          color: $value;
+        }
     }
 }
 
