--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -122,7 +122,8 @@ a {
 //
 .card {
     position: relative;
-    box-shadow: 0 1px 15px 1px rgba(62,57,107,.07);
+    border-top: 3px solid $primary;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
 
     .card-header,
     .card-body {
