--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -117,6 +117,13 @@ a {
     @include font-family('ubuntu', 'bold');
 }
 
+.modal {
+    .modal-header {
+        border-top: 3px solid $primary;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    }
+}
+
 //
 // Cards
 //
@@ -136,7 +143,7 @@ a {
         align-items: center;
         justify-content: space-between;
         background-color: transparent;
-        border-bottom: 1px solid #f4f4f4;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.15);
     }
 
     .card-body {
@@ -540,12 +547,11 @@ sup {
 //
 @each $color, $value in $theme-colors {
     .card-#{$color} {
-        // @include card-variant($value);
-        border-top: 3px solid $value;
+        @include card-variant($value);
+    }
 
-        .dropdown .btn-link {
-          color: $value;
-        }
+    .modal-#{$color} {
+        @include modal-variant($value);
     }
 }
 
