--- a/assets/views/modals-1.pug
+++ b/assets/views/modals-1.pug
@@ -91,7 +91,7 @@ block content
             button.btn.btn-primary(type="button" data-toggle="modal" data-target="#exampleModal")
                 | Launch demo modal
             // Modal
-            #exampleModal.modal.fade(tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true")
+            #exampleModal.modal.modal-danger.fade(tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true")
                 .modal-dialog(role="document")
                     .modal-content.modal-lg
                         .modal-header
