--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -13,7 +13,7 @@
 @import "components/simplebar/_simplebar";
 @import "components/flatpickr/_flatpickr";
 @import "components/floating-labels";
-@import "components/jquery.confirm/jquery.confirm";
+@import "components/select2/_select2";
 @import "layouts/_nav";
 @import "layouts/_aside";
 @import "components/_login";
